# IndexTTS_Studio

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.json  config.json  pyproject.toml  run.py  split_result.txt  test_llm_split.py  test_pause_advisor.py  text.txt  文稿.txt
src/index_tts_gui/: __init__.py  main.py
src/index_tts_gui/core/: audio_fingerprint.py  audio_speed.py  io_ass.py  llm_client.py  llm_service.py  logger.py  merger.py  pause_advisor.py  pause_rules.py  project.py  speech_aligner.py  splitter.py  subtitle.py  subtitler.py  tts_client.py
src/index_tts_gui/ui/: audio_engine.py  audio_load_worker.py  calibrate_worker.py  editor.py  empty_state.py  icon_button.py  log_status_bar.py  log_viewer.py  main_window.py  merge_worker.py  settings_dialog.py  split_worker.py  styles.py  subtitle_realign_worker.py  subtitle_regenerate_worker.py  subtitle_view.py  synthesis_panel.py  synthesis_worker.py  theme.py  timeline_canvas.py  voice_panel.py  voice_upload_worker.py  widgets.py
src/index_tts_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audio_engine.py  test_audio_speed.py  test_calibrate_worker.py  test_core.py  test_editor_table.py  test_io_ass.py  test_llm_service.py  test_llm_split.py  test_merger.py  test_project.py  test_project_extra.py  test_speech_aligner.py  test_subtitle.py  test_subtitle_panel.py  test_subtitler.py  test_workers.py
